...
    <string name="title_local_scanner">本地音乐扫描</string>
    <string name="start_local_scanner">开始扫描</string>
    <string name="processing_local_scanner">正在扫描:%s</string>
    <string name="template_scanner_result">共扫描到%d首歌曲</string>
    <string name="end_local_scanner">结束</string>
    <string name="stop_local_scanner">停止扫描</string>
    <string name="local_scanner_hint">点击开始扫描以检索手机中的音乐。</string>
    <string name="toast_read_storage_permission_denied">没有权限访问内置存储</string>
    <string name="local_scanner_setting_title">扫描设置</string>
    <string name="local_scan_setting">扫描设置</string>
    <string name="action_search">search</string>
    <string name="play_lists_created">创建的歌单</string>
    <string name="play_lists_collection">收藏的歌单</string>
...
